# relp

./: Cargo.toml  Makefile  README.md  com.jareds.repl.plist  rustfmt.toml
src/: main.rs
src/app/: app.rs  cfg.rs  mod.rs
src/app/cfg/: cfg.rs
src/app/data/: beloved_wife.csv
src/app/error/: kernel.rs
src/app/model/: state.rs
src/domain/: mod.rs
src/domain/enum/: command.rs  event.rs  exit_code.rs  mod.rs
src/domain/error/: date.rs  message.rs  mod.rs  wife.rs
src/domain/factory/: command.rs
src/domain/model/: command.rs  event.rs  mod.rs  wife.rs
src/domain/service/: mod.rs
src/domain/service/command/: worker.rs
src/domain/service/event/: loop.rs  mod.rs  model.rs
src/domain/service/executor/: executor.rs
src/domain/service/runner/: runner.rs
src/domain/service/wife/: mod.rs  model.rs  parser.rs  worker.rs
src/infrastructure/: mod.rs
src/infrastructure/broadcasting/mpsc/: channel.rs  error.rs  mod.rs
src/infrastructure/helper/: date.rs
src/infrastructure/integration/telegram/: dto.rs  facade.rs  http.rs  mod.rs  model.rs  service.rs
src/infrastructure/model/: command.rs
src/infrastructure/service/: mod.rs
src/infrastructure/service/applier/: executor.rs  mod.rs  responder.rs
src/infrastructure/service/command/: builder.rs  command.rs  dto.rs  enumerate.rs  enums.rs  factory.rs  mod.rs  model.rs  processor.rs  util.rs
src/infrastructure/service/execution/: responder.rs
src/infrastructure/service/executor/: executor.rs  mod.rs  responder.rs
src/infrastructure/service/message/: consumer.rs  facade.rs  handler.rs  mod.rs  (+2 more)
(+2 files in other folders)
