[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
shlex = "1.3.0"
chrono = "0.4.39"
log = "0.4.25"  # Высокоуровневая библиотека для логирования
env_logger = "0.10"