[package]
name = "REPL"
version = "0.1.0"
edition = "2021"

authors = ["Glazunov Borislav <glazunov2142@icloud.com>"]
description = "Remote execution helper (shell reverse proxy)."

[dependencies]
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
shlex = "1.3.0"
chrono = "0.4.39"
env_logger = "0.10"
regex = "1.11.1"
csv = "1.3.1"
crossterm = "0.28.1"
rand = "0.9.0"
